board/i586_flexwall/local_skeleton/etc/iptables.rules
# Generated by iptables-save v1.6.2 on Thu Aug 16 02:01:53 2018
*raw
:PREROUTING ACCEPT [2:1152]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 21 -j CT --helper ftp
COMMIT
# Completed on Thu Aug 16 02:01:53 2018
# Generated by iptables-save v1.6.2 on Thu Aug 16 02:01:53 2018
*nat
:PREROUTING ACCEPT [2:1152]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Thu Aug 16 02:01:53 2018
# Generated by iptables-save v1.6.2 on Thu Aug 16 02:01:53 2018
*mangle
:PREROUTING ACCEPT [2:1152]
:INPUT ACCEPT [2:1152]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A FORWARD -o eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 1400
COMMIT
# Completed on Thu Aug 16 02:01:53 2018
# Generated by iptables-save v1.6.2 on Thu Aug 16 02:01:53 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:LOGDROP - [0:0]
-A INPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -i eth1 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p icmp -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED -j ACCEPT
# in rule 1
# in rule 2
# in rule 3
# in rule 4
# in rule 5
# in rule 6
# in rule 7
# in rule 8
-A INPUT -j REJECT --reject-with icmp-admin-prohibited
-A FORWARD -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth1 -p udp -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth1 -p icmp -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-admin-prohibited
-A LOGDROP -j LOG
-A LOGDROP -j DROP
COMMIT
# Completed on Thu Aug 16 02:01:53 2018
